--- a/provision-jboss-eap.yml
+++ b/provision-jboss-eap.yml
@@ -4,10 +4,9 @@
   hosts: all
   tasks:
   - name: download sources jboss-
-    unarchive:
-      src: "https://access.redhat.com/jbossnetwork/restricted/softwareDownload.html?softwareId=99481"
-      dest: "/tmp/"
-      mode: 0755
+    get_url:
+      url: "https://access.redhat.com/jbossnetwork/restricted/softwareDownload.html?softwareId=99481"
+      dest: "/tmp/jboss-eap-7.4.0"
   become: true
 
   
