--- a/tasks/provision-jboss-eap.yml
+++ b/tasks/provision-jboss-eap.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: provsision-jboss-eap-7.4
-  hosts: all
+  hosts: jboss-allservers
   tasks:
   - name: Check if zip source file exists
     stat:
