--- a/tasks/provision-jdk.yml
+++ b/tasks/provision-jdk.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: provsision-jdk
-  hosts: all
+  hosts: servers
   tasks:
   - name: zip installed
     yum:
@@ -11,7 +11,7 @@
   - name: unzip installed
     yum:
       name: unzip
-      state: present
+      state: present*ANSIBL
       update_cache: true
   - name: openjdk-1.8 installed
     yum:
