--- a/provision-jdk.yml
+++ b/provision-jdk.yml
@@ -11,7 +11,7 @@
   - name: check if unzip is installed
     yum:
       name: unzip
-      state: present*ANSIBL
+      state: present
       update_cache: true
   - name: check if java {{ jdk_version }} is installed
     yum:
